@@ -1,3 +1,11 @@
+2007-09-25  David Shaw  <dshaw@jabberwocky.com>
+
+	* paperkey.c (main): There is no such thing as an "auto"
+	--output-type.
+
+	* parse.c (parse): Just in case, check for a short read on the
+	packet.
+
 2007-09-24  David Shaw  <dshaw@jabberwocky.com>
 
 	* AUTHORS, Makefile.am, paperkey.spec.in, paperkey.1: Add man page
